# shopping_flow

./: .gitignore  README.md  chainlit.md  poem.txt  pyproject.toml
.chainlit/: config.toml
src/shopping_flow/: main.py
src/shopping_flow/crews/shopping_crew/: shopping_crew.py
src/shopping_flow/crews/shopping_crew/config/: agents.yaml  tasks.yaml
