[project]
name = "shopping_flow"
version = "0.1.0"
description = "shopping_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "chainlit>=2.2.1",
    "crewai-tools>=0.36.0",
    "crewai[tools]>=0.102.0,<1.0.0",
]

[project.scripts]
kickoff = "shopping_flow.main:kickoff"
run_crew = "shopping_flow.main:kickoff"
plot = "shopping_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
